[gd_scene load_steps=8 format=2]

[ext_resource path="res://Particles/Sprites/Electron_dark.png" type="Texture" id=1]
[ext_resource path="res://Particles/Scenes/Electron.gd" type="Script" id=2]
[ext_resource path="res://Particles/Sprites/Symbols/NegativeCharge.png" type="Texture" id=3]
[ext_resource path="res://Particles/Resources/TinyParticleShape.tres" type="Shape2D" id=4]
[ext_resource path="res://Particles/Resources/TinyParticlePhysicsMaterial.tres" type="PhysicsMaterial" id=5]
[ext_resource path="res://Particles/Resources/ParticleArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/thump.wav" type="AudioStream" id=7]

[node name="Electron" type="RigidBody2D" groups=[
"Electrons",
]]
z_index = 1
collision_layer = 4
collision_mask = 18
physics_material_override = ExtResource( 5 )
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]

[node name="SpriteContainer" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="Particle" type="Sprite" parent="SpriteContainer"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Symbol" type="Sprite" parent="SpriteContainer/Particle"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource( 4 )

[node name="ParticleArea" parent="." instance=ExtResource( 6 )]
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 24

[node name="CollisionShape2D" parent="ParticleArea" index="0"]
shape = ExtResource( 4 )

[node name="ThumpPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
pitch_scale = 3.0

[connection signal="body_entered" from="ParticleArea" to="." method="_on_ParticleArea_body_entered"]

[editable path="ParticleArea"]
